# ML_Ops_homework

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
