[project]
name = "homework-js-zadanie-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.6.0",
    "joblib>=1.5.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
